[gd_scene load_steps=15 format=3 uid="uid://cx3wv8qg8sp5a"]

[ext_resource type="Script" path="res://Scripts/check_point_flag.gd" id="1_2faoy"]
[ext_resource type="Texture2D" uid="uid://2ejfyawp0mtq" path="res://Assets/Sprites/images/Tilemap/Checkpoint (Flag Idle)(64x64).png" id="1_6rwsp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0oeo"]
atlas = ExtResource("1_6rwsp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ii8k"]
atlas = ExtResource("1_6rwsp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2l7c"]
atlas = ExtResource("1_6rwsp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l87h0"]
atlas = ExtResource("1_6rwsp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntqg3"]
atlas = ExtResource("1_6rwsp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pytbl"]
atlas = ExtResource("1_6rwsp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l2tf"]
atlas = ExtResource("1_6rwsp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fp56"]
atlas = ExtResource("1_6rwsp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoq0d"]
atlas = ExtResource("1_6rwsp")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rlod"]
atlas = ExtResource("1_6rwsp")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lo7et"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0oeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ii8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2l7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l87h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntqg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pytbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l2tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fp56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoq0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rlod")
}],
"loop": true,
"name": &"Wave",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2e3s"]
size = Vector2(15, 20)

[node name="CheckPointFlag" type="Node2D"]
script = ExtResource("1_2faoy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_lo7et")
animation = &"Wave"
autoplay = "Wave"
frame_progress = 0.963474

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 9)
shape = SubResource("RectangleShape2D_f2e3s")

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[connection signal="winscreen" from="." to="." method="_on_winscreen"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
